vista inicial landing

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SounOn</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="assets/logo.png" type="image/png">
+
 </head>
 <body>
     <main>
         <section>
-            <h2>LOGO</h2>
+            <img src="assets/logo.png" alt="Logo de SounOn" height="300px">
             <h1>
                 Express yourself throught music.<br/>
                 Discover new genres, connect with<br/>
