--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,13 @@
     <main>
         <section>
             <img src="assets/logo.png" alt="Logo de SounOn" height="300px">
-            <h1>
+            <h1><i>SoundOn</i></h1>
+            <h2>
                 Express yourself throught music.<br/>
                 Discover new genres, connect with<br/>
                 your friends and share the song that<br/>
                 defines your day.
-            </h1>
+            </h2>
         </section>
         <section class="login-sec">
             <div class="login">
