Pantalla de upload y cambios landing

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SounOn</title>
+    <title>SoundOn</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="assets/logo.png" type="image/png">
 
@@ -20,7 +20,7 @@
                 defines your day.
             </h2>
         </section>
-        <section class="login-sec">
+        <section>
             <div class="login">
                 <div class="email_input">
                     <label>Email</label>
@@ -29,6 +29,7 @@
                 <div class="password_input">
                     <label>Password</label>
                     <input class="password" type="password">
+                    <i class="icon_eye_slash"></i>
                 </div>
                 <button class="login_button">Login</button>
             </div>
