--- a/src/upload.html
+++ b/src/upload.html
@@ -23,7 +23,7 @@
         <!-- Obtención del videoclip mediante la API de YouTube -->
         <section class="upload_sec">
             <!-- Ejemplo de canción seleccionada -->
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/UCF9oHXhDMU?si=UjOkqy4uLRxtr6sa&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/GJtrE-SLtZA?si=bq1HS4pSy7PvQyNZ&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </section>
         <section class="text_sec">
             <textarea class="cherry_text" placeholder="Como te encuentras hoy?"></textarea>
