--- a/src/perfil1.html
+++ b/src/perfil1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil</title>
-    <link rel="stylesheet" href="prueba7.css">
+    <link rel="stylesheet" href="perfil1.css">
     <link rel="icon" href="assets/logo.png" type="image/png">
 </head>
 <body>
