--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SoundOn</title>
+    <link rel="icon" href="../assets/logo.png" type="image/png">
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="assets/logo.png" type="image/png">
-
+    <link rel="stylesheet" href="styles/landing.css">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
         <section>
-            <img src="assets/logo.png" alt="Logo de SounOn" height="300px">
-            <h1><i>SoundOn</i></h1>
+            <img src="../assets/logo.png" alt="Logo de SounOn" height="300px">
+            <h1>SoundOn</h1>
             <h2>
                 Express yourself throught music.<br/>
                 Discover new genres, connect with<br/>
@@ -31,10 +32,14 @@
                     <input class="password" type="password">
                     <i class="icon_eye_slash"></i>
                 </div>
-                <button class="login_button">Login</button>
+                <a href="upload/upload.html">
+                    <button class="login_button">Login</button>
+                </a>
             </div>
             <hr/>
-            <button class="register_button">Create an Account</button>
+            <a href="register/register.html">
+                <button class="register_button">Create an Account</button>
+            </a>
         </section>
     </main>
 </body>
