--- a/src/pages/friends/friends.html
+++ b/src/pages/friends/friends.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SoundOn - Upload your daily song</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../index.css">
+    <link rel="stylesheet" href="../styles/sidebar.css">
     <link rel="stylesheet" href="friends.css">
     <link rel="icon" href="assets/logo.png" type="image/png">
-
 </head>
 <body>
     <aside>
-        <img src="assets/logo.png" alt="SoundOn">
+        <img src="../../assets/logo.png" alt="SoundOn">
         <nav>
             <a class="current_page">
                 <i class="icon_friends"></i>
@@ -21,7 +21,7 @@
                 <i class="icon_explore"></i>
                 Explore
             </a>
-            <a href="upload.html">
+            <a href="../profile/info.html">
                 <i class="icon_profile"></i>
                 Profile
             </a>
