--- a/src/pages/upload/upload.html
+++ b/src/pages/upload/upload.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SoundOn - Upload your daily song</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../index.css">
     <link rel="stylesheet" href="upload.css">
-    <link rel="icon" href="assets/logo.png" type="image/png">
+    <link rel="icon" href="../../assets/logo.png" type="image/png">
 
 </head>
 <body>
@@ -14,7 +14,7 @@
         <!-- Busqueda mediante la API de Spotify o YoutubeMusic -->
         <section class="search">
             <div>
-                <input type="text" class="search_input" placeholder="Search for a song">
+                <input type="text" placeholder="Search for a song">
                 <button class="search_button">
                     <i class="icon_search"></i>
                 </button>
@@ -25,12 +25,8 @@
             <!-- Ejemplo de canción seleccionada -->
             <iframe width="100%" height="100%" src="https://www.youtube.com/embed/GJtrE-SLtZA?si=bq1HS4pSy7PvQyNZ&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </section>
-        <section class="text_sec">
-            <textarea class="cherry_text" placeholder="Como te encuentras hoy?"></textarea>
-        </section>
-        <button class="upload_button">
-            Upload
-        </button>
+        <textarea class="cherry_text" placeholder="Como te encuentras hoy?"></textarea>
+        <a class="button" href="../friends/friends.html">Upload</a>
     </main>
 </body>
 </html>
