--- a/src/pages/profile/detailedSong.html
+++ b/src/pages/profile/detailedSong.html
@@ -63,15 +63,15 @@
                 </div>
                 <div class="stats-bar">
                     <div class="stat-item">
-                        <i class="fa fa-heart" style="color: red;"></i> <!-- Ícono de corazón -->
-                        <span>10</span> <!-- Número de likes debajo -->
+                        <i class="fa fa-heart" style="color: red;"></i>
+                        <span>10</span> 
                     </div>
                     <div class="stat-item">
-                        <i class="fa fa-comment" style="color: white;"></i> <!-- Ícono de comentarios -->
-                        <span>3</span> <!-- Número de comentarios debajo -->
+                        <i class="fa fa-comment" style="color: white;"></i> 
+                        <span>3</span> 
                     </div>
                     <div class="stat-item options">
-                        <i class="fa fa-ellipsis-h" style="color: white;"></i> <!-- Tres puntos -->
+                        <i class="fa fa-ellipsis-h" style="color: white;"></i>
                     </div>
                 </div>
                
