--- a/src/pages/register/userData.html
+++ b/src/pages/register/userData.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <main>
+         <span class="back-button" onclick="location.href='register.html'">&#8592;</span>
         <div class="logo">
             <img src="../../assets/logo.png" alt="SoundOn Logo" width="50">
             <h1>SoundOn</h1>
