--- a/src/pages/register/preferences.html
+++ b/src/pages/register/preferences.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <main>
+         <span class="back-button" onclick="location.href='userData.html'">&#8592;</span>
         <h2>Let us know who you are</h2>
         <div class="genres">
             <button class="genre">Pop</button>
