--- a/src/pages/profile/bites.html
+++ b/src/pages/profile/bites.html
@@ -18,15 +18,22 @@
                 <i class="icon_friends"></i>
                 Friends
             </a>
-            <a href="friends.html">
+            <a href="../explore/explore.html">
                 <i class="icon_explore"></i>
                 Explore
+            </a>
+            <a href="../notifications/notificaciones.html">
+                <i class="icon_notifications"></i>
+                Notifications
             </a>
             <a class="current_page">
                 <i class="icon_profile"></i>
                 Profile
             </a>
         </nav>
+        <a class="logout">
+            <i class="icon_logout"></i>
+        </a>
     </aside>
     <main>
         <header>
