he cambiado la ruta de las imagenes espero que funcione

--- a/src/pages/notifications/notificaciones.html
+++ b/src/pages/notifications/notificaciones.html
@@ -6,28 +6,28 @@
     <title>Notificaciones</title>
     <link rel="stylesheet" href="sidebard.css">
     <link rel="stylesheet" href="notificaciones4.css">
-    <link rel="icon" href="assets/logo.png" type="image/png">
+    <link rel="icon" href="../../assets/logo.png" type="image/png">
 </head>
 <body>
     <div class="container">
         <div class="sidebar">
             <div class="sidebartop">
                 <div class="logo">
-                    <img src="assets/logo.png" alt="Logo de SoundOn" height="70px">
+                    <img src="../../assets/logo.png" alt="Logo de SoundOn" height="70px">
                 </div>
             </div>
 
             <nav>
                 <ul>
-                    <li><a href="#"><img src="assets/friends.png" alt="Friends"><span class="text">Friends</span></a></li>
-                    <li><a href="#"><img src="assets/explore.png" alt="Explore"><span class="text">Explore</span></a></li>
-                    <li><a href="#"><img src="assets/profile.png" alt="Profile"><span class="text">Profile</span></a></li>
-                    <li class="actual"><a href="#"><img src="assets/notificationsRed.png" alt="Notifications"><span class="text">Notifications</span></a></li>
+                    <li><a href="#"><img src="../../assets/friends.png" alt="Friends"><span class="text">Friends</span></a></li>
+                    <li><a href="#"><img src="../../assets/explore.png" alt="Explore"><span class="text">Explore</span></a></li>
+                    <li><a href="#"><img src="../../assets/profile.png" alt="Profile"><span class="text">Profile</span></a></li>
+                    <li class="actual"><a href="#"><img src="../../assets/notificationsRed.png" alt="Notifications"><span class="text">Notifications</span></a></li>
                 </ul>
             </nav>
             <div class="account">
                 <div class="logout">
-                    <a href="#"><img src="assets/logout.png" alt="Logout"></a>
+                    <a href="#"><img src="../../assets/logout.png" alt="Logout"></a>
                 </div>
             </div>
         </div>
@@ -44,7 +44,7 @@
             </div>
             <div class="notifications-section">
                 <div class="notification">
-                    <img class="user-icon" src="assets/perfil_flora.jpeg" alt="Perfil de usuario">
+                    <img class="user-icon" src="../../assets/perfil_flora.jpeg" alt="Perfil de usuario">
                     <div class="notification-content">
                         <div class="notification-header">
                             <strong>andrea.grt</strong>
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <div class="notification">
-                    <img class="user-icon" src="assets/perfil2.jpg" alt="Perfil de usuario">
+                    <img class="user-icon" src="../../assets/perfil2.jpg" alt="Perfil de usuario">
                     <div class="notification-content">
                         <div class="notification-header">
                             <strong>sofi</strong>
@@ -69,11 +69,11 @@
                         </div>
                     </div>
                     <div class="play-button">
-                        <img src="assets/play_arrow.png" alt="Play Icon">
+                        <img src="../../assets/play_arrow.png" alt="Play Icon">
                     </div>
                 </div>
                 <div class="notification">
-                    <img class="user-icon" src="assets/peril_gafas.jpeg" alt="Perfil de usuario">
+                    <img class="user-icon" src="../../assets/peril_gafas.jpeg" alt="Perfil de usuario">
                     <div class="notification-content">
                         <div class="notification-header">
                             <strong>Tereee</strong>
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="notification">
-                    <img class="user-icon" src="assets/perfil_chica.jpeg" alt="Perfil de usuario">
+                    <img class="user-icon" src="../../assets/perfil_chica.jpeg" alt="Perfil de usuario">
                     <div class="notification-content">
                         <div class="notification-header">
                             <strong>Martita</strong>
@@ -98,11 +98,11 @@
                         </div>
                     </div>
                     <div class="play-button">
-                        <img src="assets/play_arrow.png" alt="Play Icon">
+                        <img src="../../assets/play_arrow.png" alt="Play Icon">
                     </div>
                 </div>
                 <div class="notification">
-                    <img class="user-icon" src="assets/perfil_flora.jpeg" alt="Perfil de usuario">
+                    <img class="user-icon" src="../../assets/perfil_flora.jpeg" alt="Perfil de usuario">
                     <div class="notification-content">
                         <div class="notification-header">
                             <strong>andrea.grt</strong>
@@ -114,11 +114,11 @@
                         </div>
                     </div>
                     <div class="play-button">
-                        <img src="assets/play_arrow.png" alt="Play Icon">
+                        <img src="../../assets/play_arrow.png" alt="Play Icon">
                     </div>
                 </div>
                 <div class="notification">
-                    <img class="user-icon" src="assets/perfil_flor.jpeg" alt="Perfil de usuario">
+                    <img class="user-icon" src="../../assets/perfil_flor.jpeg" alt="Perfil de usuario">
                     <div class="notification-content">
                         <div class="notification-header">
                             <strong>lomastoale</strong>
@@ -130,11 +130,11 @@
                         </div>
                     </div>
                     <div class="play-button">
-                        <img src="assets/play_arrow.png" alt="Play Icon">
+                        <img src="../../assets/play_arrow.png" alt="Play Icon">
                     </div>
                 </div>
                 <div class="notification">
-                    <img class="user-icon" src="assets/perfil_chica.jpeg" alt="Perfil de usuario">
+                    <img class="user-icon" src="../../assets/perfil_chica.jpeg" alt="Perfil de usuario">
                     <div class="notification-content">
                         <div class="notification-header">
                             <strong>Martita</strong>
@@ -146,11 +146,11 @@
                         </div>
                     </div>
                     <div class="play-button">
-                        <img src="assets/play_arrow.png" alt="Play Icon">
+                        <img src="../../assets/play_arrow.png" alt="Play Icon">
                     </div>
                 </div>
                 <div class="notification">
-                    <img class="user-icon" src="assets/perfil_chica.jpeg" alt="Perfil de usuario">
+                    <img class="user-icon" src="../../assets/perfil_chica.jpeg" alt="Perfil de usuario">
                     <div class="notification-content">
                         <div class="notification-header">
                             <strong>Martita</strong>
@@ -162,7 +162,7 @@
                         </div>
                     </div>
                     <div class="play-button">
-                        <img src="assets/play_arrow.png" alt="Play Icon">
+                        <img src="../../assets/play_arrow.png" alt="Play Icon">
                     </div>
                 </div>
                 <!-- Añade más notificaciones según sea necesario -->
