--- a/src/pages/notifications/notificaciones.html
+++ b/src/pages/notifications/notificaciones.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notificaciones</title>
     <link rel="stylesheet" href="sidebard.css">
-    <link rel="stylesheet" href="notificaciones4.css">
+    <link rel="stylesheet" href="notificaciones.css">
     <link rel="icon" href="../../assets/logo.png" type="image/png">
 </head>
 <body>
