--- a/src/pages/explore/explore.html
+++ b/src/pages/explore/explore.html
@@ -21,7 +21,7 @@
                 <i class="icon_explore"></i>
                 Explore
             </a>
-            <a href="../notifications/notificaciones.html">
+            <a href="../notifications/notifications.html">
                 <i class="icon_notifications"></i>
                 Notifications
             </a>
@@ -36,6 +36,14 @@
     </aside>
     <main>
         <div class="cards_container">
+            <div class="search">
+                <div>
+                    <input type="text" placeholder="Search for new songs">
+                    <button class="search_button">
+                        <i class="icon_search"></i>
+                    </button>
+                </div>
+            </div>
             <div class="card">
                 <div class="infocuenta">
                     <div class="avatarMini"><img src="../../assets/chica_gafas_perfil.jpeg" alt="Foto Perfil"></div>
@@ -45,8 +53,8 @@
                 <div class="contenedor" >
                     <div class="controls">
                         <div class="control-button"><img src="../../assets/like.png" alt="Liked"></div>
-                        <div class="control-button"><img src="../..assets/chat_bubble.png" alt="Comments"></div>
-                        <div class="control-button"><img src="../..assets/more_horiz.png" alt="Options"></div>
+                        <div class="control-button"><img src="../../assets/chat_bubble.png" alt="Comments"></div>
+                        <div class="control-button"><img src="../../assets/more_horiz.png" alt="Options"></div>
                     </div>
                     <img src="../../assets/shameless.jpeg" alt="Imagen de portada">
                     <div class="song-bar">
