--- a/src/pages/notifications/notifications.html
+++ b/src/pages/notifications/notifications.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notificaciones</title>
-<<<<<<< HEAD
     <link rel="stylesheet" href="../index.css">
     <link rel="stylesheet" href="../styles/sidebar.css">
-    <link rel="stylesheet" href="notificaciones3.css">
+    <link rel="stylesheet" href="notifications.css">
     <link rel="icon" href="../../assets/logo.png" type="image/png">
 </head>
 <body>
     <aside>
         <img src="../../assets/logo.png" alt="SoundOn">
         <nav>
-            <a href="../notifications/notificaciones.html">
+            <a href="../friends/friends.html">
                 <i class="icon_friends"></i>
                 Friends
             </a>
@@ -35,38 +34,8 @@
             <i class="icon_logout"></i>
         </a>
     </aside>
-    <div class="container">
-=======
-    <link rel="stylesheet" href="sidebard.css">
-    <link rel="stylesheet" href="notificaciones.css">
-    <link rel="icon" href="../../assets/logo.png" type="image/png">
-</head>
-<body>
-    <div class="container">
-        <div class="sidebar">
-            <div class="sidebartop">
-                <div class="logo">
-                    <img src="../../assets/logo.png" alt="Logo de SoundOn" height="70px">
-                </div>
-            </div>
-
-            <nav>
-                <ul>
-                    <li><a href="#"><img src="../../assets/friends.png" alt="Friends"><span class="text">Friends</span></a></li>
-                    <li><a href="#"><img src="../../assets/explore.png" alt="Explore"><span class="text">Explore</span></a></li>
-                    <li><a href="#"><img src="../../assets/profile.png" alt="Profile"><span class="text">Profile</span></a></li>
-                    <li class="actual"><a href="#"><img src="../../assets/notificationsRed.png" alt="Notifications"><span class="text">Notifications</span></a></li>
-                </ul>
-            </nav>
-            <div class="account">
-                <div class="logout">
-                    <a href="#"><img src="../../assets/logout.png" alt="Logout"></a>
-                </div>
-            </div>
-        </div>
-
->>>>>>> 3b387b561f70f4bd85bef78a2206e448dfc5f25d
-        <div class="main">
+    <main>
+        <div class="notifications_container">
             <div class="notifications-header">
                 <h2>Notificaciones</h2>
                 <div class="filters">
@@ -77,7 +46,7 @@
                 </div>
             </div>
             <div class="notifications-section">
-                <div class="notification"></div>
+                <div class="notification">
                     <img class="user-icon" src="../../assets/perfil_flora.jpeg" alt="Perfil de usuario">
                     <div class="notification-content">
                         <div class="notification-header">
@@ -103,19 +72,11 @@
                         </div>
                     </div>
                     <div class="play-button">
-<<<<<<< HEAD
-                        <img src="assets/play_arrow.png" alt="Play Icon">
-                    </div>
-                </div>
-                <div class="notification">
-                    <img class="user-icon" src="assets/peril_gafas.jpeg" alt="Perfil de usuario">
-=======
                         <img src="../../assets/play_arrow.png" alt="Play Icon">
                     </div>
                 </div>
                 <div class="notification">
                     <img class="user-icon" src="../../assets/peril_gafas.jpeg" alt="Perfil de usuario">
->>>>>>> 3b387b561f70f4bd85bef78a2206e448dfc5f25d
                     <div class="notification-content">
                         <div class="notification-header">
                             <strong>Tereee</strong>
@@ -128,11 +89,7 @@
                     </div>
                 </div>
                 <div class="notification">
-<<<<<<< HEAD
-                    <img class="user-icon" src="assets/perfil_chica.jpeg" alt="Perfil de usuario">
-=======
                     <img class="user-icon" src="../../assets/perfil_chica.jpeg" alt="Perfil de usuario">
->>>>>>> 3b387b561f70f4bd85bef78a2206e448dfc5f25d
                     <div class="notification-content">
                         <div class="notification-header">
                             <strong>Martita</strong>
@@ -144,19 +101,11 @@
                         </div>
                     </div>
                     <div class="play-button">
-<<<<<<< HEAD
-                        <img src="assets/play_arrow.png" alt="Play Icon">
-                    </div>
-                </div>
-                <div class="notification">
-                    <img class="user-icon" src="assets/perfil_flora.jpeg" alt="Perfil de usuario">
-=======
                         <img src="../../assets/play_arrow.png" alt="Play Icon">
                     </div>
                 </div>
                 <div class="notification">
                     <img class="user-icon" src="../../assets/perfil_flora.jpeg" alt="Perfil de usuario">
->>>>>>> 3b387b561f70f4bd85bef78a2206e448dfc5f25d
                     <div class="notification-content">
                         <div class="notification-header">
                             <strong>andrea.grt</strong>
@@ -168,19 +117,11 @@
                         </div>
                     </div>
                     <div class="play-button">
-<<<<<<< HEAD
-                        <img src="assets/play_arrow.png" alt="Play Icon">
-                    </div>
-                </div>
-                <div class="notification">
-                    <img class="user-icon" src="assets/perfil_flor.jpeg" alt="Perfil de usuario">
-=======
                         <img src="../../assets/play_arrow.png" alt="Play Icon">
                     </div>
                 </div>
                 <div class="notification">
                     <img class="user-icon" src="../../assets/perfil_flor.jpeg" alt="Perfil de usuario">
->>>>>>> 3b387b561f70f4bd85bef78a2206e448dfc5f25d
                     <div class="notification-content">
                         <div class="notification-header">
                             <strong>lomastoale</strong>
@@ -192,19 +133,11 @@
                         </div>
                     </div>
                     <div class="play-button">
-<<<<<<< HEAD
-                        <img src="assets/play_arrow.png" alt="Play Icon">
-                    </div>
-                </div>
-                <div class="notification">
-                    <img class="user-icon" src="assets/perfil_chica.jpeg" alt="Perfil de usuario">
-=======
                         <img src="../../assets/play_arrow.png" alt="Play Icon">
                     </div>
                 </div>
                 <div class="notification">
                     <img class="user-icon" src="../../assets/perfil_chica.jpeg" alt="Perfil de usuario">
->>>>>>> 3b387b561f70f4bd85bef78a2206e448dfc5f25d
                     <div class="notification-content">
                         <div class="notification-header">
                             <strong>Martita</strong>
@@ -216,19 +149,11 @@
                         </div>
                     </div>
                     <div class="play-button">
-<<<<<<< HEAD
-                        <img src="assets/play_arrow.png" alt="Play Icon">
-                    </div>
-                </div>
-                <div class="notification">
-                    <img class="user-icon" src="assets/perfil_chica.jpeg" alt="Perfil de usuario">
-=======
                         <img src="../../assets/play_arrow.png" alt="Play Icon">
                     </div>
                 </div>
                 <div class="notification">
                     <img class="user-icon" src="../../assets/perfil_chica.jpeg" alt="Perfil de usuario">
->>>>>>> 3b387b561f70f4bd85bef78a2206e448dfc5f25d
                     <div class="notification-content">
                         <div class="notification-header">
                             <strong>Martita</strong>
@@ -240,16 +165,12 @@
                         </div>
                     </div>
                     <div class="play-button">
-<<<<<<< HEAD
-                        <img src="assets/play_arrow.png" alt="Play Icon">
-=======
                         <img src="../../assets/play_arrow.png" alt="Play Icon">
->>>>>>> 3b387b561f70f4bd85bef78a2206e448dfc5f25d
                     </div>
                 </div>
                 <!-- Añade más notificaciones según sea necesario -->
             </div>
         </div>
-    </div>
+    </main>
 </body>
 </html>
