--- a/src/pages/explore/explore.html
+++ b/src/pages/explore/explore.html
@@ -49,7 +49,7 @@
                     <div class="avatarMini"><img src="../../assets/chica_gafas_perfil.jpeg" alt="Foto Perfil"></div>
                     <h3> lara.baird</h3>
                 </div>
-                <a href="detailedSong.html">
+                <a href="../profile/detailedSong.html">
                 <div class="contenedor" >
                     <div class="controls">
                         <div class="control-button"><img src="../../assets/like.png" alt="Liked"></div>
