--- a/src/pages/friends/friends.html
+++ b/src/pages/friends/friends.html
@@ -45,7 +45,7 @@
                     <div class="avatarMini"><img src="../../assets/perro_perfil.jpeg" alt="Foto Perfil"></div>
                     <h3>saraaa</h3>
                 </div>
-                <a href="detailedSong.html">
+                <a href="../profile/detailedSong.html">
                 <div class="contenedor" >
                     <div class="controls">
                         <div class="control-button"><img src="../../assets/like.png" alt="Liked"></div>
