--- a/src/pages/profile/info.html
+++ b/src/pages/profile/info.html
@@ -31,7 +31,7 @@
                 Profile
             </a>
         </nav>
-        <a class="logout">
+        <a href="../index.html" class="logout">
             <i class="icon_logout"></i>
         </a>
     </aside>
